package strategy.afterApplyDuck;

public interface FlyBehavior {
    void fly();
}
